# TK1W2_reimagined-guacamole

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TK1W2_reimagined-guacamole  TK1W2_reimagined-guacamole.cbp  cmake_install.cmake  main.cpp  test.cpp
.cmake/api/v1/reply/: cache-v2-f271993debb1c3518dd7.json  cmakeFiles-v1-01993769d5d3a3ca6ae3.json  cmakeFiles-v1-12f88bd70968ade06ecd.json  codemodel-v2-ea6c0d942dbe295c48ee.json  index-2024-06-08T05-02-46-0964.json  index-2024-06-09T10-57-28-0245.json  target-TK1W2_reimagined-guacamole-Debug-9312ac515d25419fff4e.json  toolchains-v1-152d23bd0efba4a5ef19.json
MK_Algo-TugasKelompok1/convertSeconds/: convertSeconds.cpp  convertSeconds.h
MK_Algo-TugasKelompok1/stringManipulator/: stringManipulator.cpp  stringManipulator.h
